DuPont DevSB/src/objects/OrgGroup__c.object
<CustomObject>
    <description>Identifies a fundamental framework or collection of entities, assets. people, processes etc. which are related for administrative purposes in Force.com. (example of use cases: identify a Sales Area grouping of master data from SAP; identify metadata asset grouping for a CRM Program; identify security asset grouping used for a program sharing model, etc.)</description>
    <fields>
        <fullName>Account_Rule__c</fullName>
        <description>These values drive the business logic to determine which ERP Customer to create new accounts. The Account group on ERP Customer is where these values are compared.</description>
        <inlineHelpText>These values drive the business logic to determine which ERP Customer to create new accounts. The Account group on ERP Customer is where these values are compared.</inlineHelpText>
        <label>Account Rule</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price Reference Customer</fullName>
                </value>
                <value>
                    <fullName>Z001 ( Sold-to party )</fullName>
                </value>
                <value>
                    <fullName>Z002 (Ship-to party)</fullName>
                </value>
                <value>
                    <fullName>Z003 (Payer)</fullName>
                </value>
                <value>
                    <fullName>Z004 (Bill-to party)</fullName>
                </value>
                <value>
                    <fullName>Z012 (Hierarchy node)</fullName>
                </value>
                <value>
                    <fullName>Z100 (Plant/Distribution Ctr)</fullName>
                </value>
                <value>
                    <fullName>ZCOA (COA Recipient)</fullName>
                </value>
                <value>
                    <fullName>ZCPD (One-time cust.(int.no.)</fullName>
                </value>
                <value>
                    <fullName>ZCSR (Customer Service Rep)</fullName>
                </value>
                <value>
                    <fullName>ZEND (End User)</fullName>
                </value>
                <value>
                    <fullName>ZEXC ( Sold-to party )</fullName>
                </value>
                <value>
                    <fullName>ZISS Intrasub sale @ mkt price</fullName>
                </value>
                <value>
                    <fullName>ZLOG (Port)</fullName>
                </value>
                <value>
                    <fullName>ZMAR (Marine partner)</fullName>
                </value>
                <value>
                    <fullName>ZSRP (Sales Representative)</fullName>
                </value>
                <value>
                    <fullName>ZSUB (Dupont Subsidiary)</fullName>
                </value>
                <value>
                    <fullName>ZZ-Field not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ERP_Distribution_Channel_Code__c</fullName>
        <description>The way in which products or services reach the customer. Typical examples of distribution channels are wholesale, retail, or direct sales.</description>
        <label>Dist. Channel Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Distribution_Channel__c</fullName>
        <description>The way in which products or services reach the customer. Typical examples of distribution channels are wholesale, retail, or direct sales.</description>
        <label>Dist. Channel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Division_Code__c</fullName>
        <description>A way of grouping materials, products, or services. The system uses divisions to determine the sales areas and business areas to which a material, product, or service belongs. A product or service is always assigned to just one division.</description>
        <label>Division Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Division__c</fullName>
        <description>A way of grouping materials, products, or services. The system uses divisions to determine the sales areas and business areas to which a material, product, or service belongs. A product or service is always assigned to just one division.</description>
        <label>Division</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Sales_Org_Code__c</fullName>
        <description>An organizational unit responsible for the sale of certain products or services.</description>
        <label>Sales Org. Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Sales_Org__c</fullName>
        <description>An organizational unit responsible for the sale of certain products or services.</description>
        <label>Sales Org.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ERP_ID__c</fullName>
        <description>Combines the Sales Org Code + Distribution Channel Code + Division Code to identify a unique record.</description>
        <externalId>true</externalId>
        <label>External ERP ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>International_Dial_Code__c</fullName>
        <label>International Dial Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>International_Dial_Prefix__c</fullName>
        <label>International Dial Prefix</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Level_Description__c</fullName>
        <description>Description of the value in the level field.</description>
        <label>Level Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Unit</fullName>
                </value>
                <value>
                    <fullName>Commercial Unit</fullName>
                </value>
                <value>
                    <fullName>Sales Area</fullName>
                </value>
                <value>
                    <fullName>District</fullName>
                </value>
                <value>
                    <fullName>Region</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <description>Numeric value used to define hierarchy of organizational group records.</description>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owning_Business__c</fullName>
        <description>Owning Business of this Organizational Grouping</description>
        <label>Owning Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Building Innovations</fullName>
                </value>
                <value>
                    <fullName>DuPont Protection Technologies</fullName>
                </value>
                <value>
                    <fullName>Electronics &amp; Communications</fullName>
                </value>
                <value>
                    <fullName>Industrial Biosciences</fullName>
                </value>
                <value>
                    <fullName>Nutrition &amp; Health</fullName>
                </value>
                <value>
                    <fullName>Packaging &amp; Industrial Polymers</fullName>
                </value>
                <value>
                    <fullName>Performance Polymers</fullName>
                </value>
                <value>
                    <fullName>Pioneer</fullName>
                </value>
                <value>
                    <fullName>Titanium Technologies</fullName>
                </value>
                <value>
                    <fullName>ZZ -Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owning_Organization__c</fullName>
        <description>The DuPont organization that owns this record, should be a combination of the accepted abbreviations of SBU(Strategic Business Unit)-BU(Business Unit)-SubBU(Business or Product Line)</description>
        <label>Owning Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AGNH-Qualicon</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BI-Env</fullName>
                </value>
                <value>
                    <fullName>BI-Landscape Systems</fullName>
                </value>
                <value>
                    <fullName>BI-Surf</fullName>
                </value>
                <value>
                    <fullName>CORS-Government Affairs</fullName>
                </value>
                <value>
                    <fullName>DEC-Microcircuit Materials</fullName>
                </value>
                <value>
                    <fullName>DEC-Packaging Graphics</fullName>
                </value>
                <value>
                    <fullName>DPP-Parts</fullName>
                </value>
                <value>
                    <fullName>DPP-Polymers</fullName>
                </value>
                <value>
                    <fullName>DPT</fullName>
                </value>
                <value>
                    <fullName>DPT-A&amp;HF</fullName>
                </value>
                <value>
                    <fullName>DPT-Agriculture</fullName>
                </value>
                <value>
                    <fullName>DPT-Air and Filtration</fullName>
                </value>
                <value>
                    <fullName>DPT-Aramids</fullName>
                </value>
                <value>
                    <fullName>DPT-ASPS</fullName>
                </value>
                <value>
                    <fullName>DPT-Automotive</fullName>
                </value>
                <value>
                    <fullName>DPT-Chemical Industrial</fullName>
                </value>
                <value>
                    <fullName>DPT-Covers</fullName>
                </value>
                <value>
                    <fullName>DPT-Critical Clean</fullName>
                </value>
                <value>
                    <fullName>DPT-Envelopes</fullName>
                </value>
                <value>
                    <fullName>DPT-ES</fullName>
                </value>
                <value>
                    <fullName>DPT-Graphics</fullName>
                </value>
                <value>
                    <fullName>DPT-Ind Pkg &amp; Protection</fullName>
                </value>
                <value>
                    <fullName>DPT-IPP</fullName>
                </value>
                <value>
                    <fullName>DPT-Mechanical Industrial</fullName>
                </value>
                <value>
                    <fullName>DPT-Medical Fabrics</fullName>
                </value>
                <value>
                    <fullName>DPT-Medical Packaging</fullName>
                </value>
                <value>
                    <fullName>DPT-Medical Specialties</fullName>
                </value>
                <value>
                    <fullName>DPT-NOW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to determine hierarchy of Organizational Group records.</description>
        <label>Parent</label>
        <referenceTo>OrgGroup__c</referenceTo>
        <relationshipLabel>Organizational Groups</relationshipLabel>
        <relationshipName>Organizational_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PortalAccessGrouping__c</fullName>
        <description>Portal Access Grouping describes for the access requester a unique set of security metadata assets to be assigned to a portal user for a given Portal User Access Request</description>
        <label>Portal Access Grouping</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Role__c</fullName>
        <description>Role of the Portal User</description>
        <label>Portal Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>ZZ-Field not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PHI-LA</fullName>
                </value>
                <value>
                    <fullName>PHI-AFRICA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Level_1_Code__c</fullName>
        <description>used to define parent at  Level 1 for the organizational group record.</description>
        <label>Sales Level 1 Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Level_2_Code__c</fullName>
        <description>used to define parent at  Level 2 for the organizational group record.</description>
        <label>Sales Level 2 Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Level_3_Code__c</fullName>
        <description>used to define parent at  Level 3 for the organizational group record.</description>
        <label>Sales Level 3 Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Level_Code__c</fullName>
        <description>Abbreviated value assigned to a organizational group record.</description>
        <label>Sales Level Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Level_Name__c</fullName>
        <description>Name of corresponding Sales Level Code</description>
        <label>Sales Level Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteObject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Site Object this Organizational Group defines</description>
        <label>Site Object</label>
        <referenceTo>SiteObject__c</referenceTo>
        <relationshipLabel>Organizational Groups</relationshipLabel>
        <relationshipName>Organizational_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Defines whether or not the Organizational Group record is active for use.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of Organizational Group being defined</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Access</fullName>
                </value>
                <value>
                    <fullName>ERP</fullName>
                </value>
                <value>
                    <fullName>Sales Hierarchy</fullName>
                </value>
                <value>
                    <fullName>Sales Reporting</fullName>
                </value>
                <value>
                    <fullName>ZZ-Field not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Organizational Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ERP_Division__c</columns>
        <columns>ERP_Sales_Org__c</columns>
        <columns>ERP_Distribution_Channel__c</columns>
        <columns>External_ERP_ID__c</columns>
        <columns>Owning_Organization__c</columns>
        <columns>PortalAccessGrouping__c</columns>
        <columns>SiteObject__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account_Rule__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ERP_Sales_Area_with_Account_rule_active</fullName>
        <columns>NAME</columns>
        <columns>ERP_Sales_Org_Code__c</columns>
        <columns>ERP_Sales_Org__c</columns>
        <columns>Account_Rule__c</columns>
        <columns>External_ERP_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>OrgGroup__c.ERP_Sales_Area</value>
        </filters>
        <filters>
            <field>Account_Rule__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>ERP Sales Area with Account rule active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>N_H</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Sales_Level_Code__c</columns>
        <columns>Sales_Level_Name__c</columns>
        <columns>Sales_Level_1_Code__c</columns>
        <columns>Sales_Level_2_Code__c</columns>
        <columns>Sales_Level_3_Code__c</columns>
        <columns>Sales_Level_4_Code__c</columns>
        <columns>International_Dial_Prefix__c</columns>
        <columns>International_Dial_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>OrgGroup__c.N_H_Sales_Org</value>
        </filters>
        <label>N&amp;H Sales Regions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pioneer_Sales_Org</fullName>
        <columns>NAME</columns>
        <columns>Owning_Organization__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Level__c</columns>
        <columns>Sales_Level_1_Code__c</columns>
        <columns>Sales_Level_2_Code__c</columns>
        <columns>Sales_Level_3_Code__c</columns>
        <columns>Sales_Level_4_Code__c</columns>
        <columns>Sales_Level_Code__c</columns>
        <columns>Sales_Level_Name__c</columns>
        <columns>Program__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>OrgGroup__c.Pioneer_Sales_Org</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Pioneer Sales Org</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pioneer_ZA_Sales_Org</fullName>
        <columns>NAME</columns>
        <columns>Owning_Organization__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Level__c</columns>
        <columns>Sales_Level_1_Code__c</columns>
        <columns>Sales_Level_2_Code__c</columns>
        <columns>Sales_Level_3_Code__c</columns>
        <columns>Sales_Level_4_Code__c</columns>
        <columns>Sales_Level_Code__c</columns>
        <columns>Sales_Level_Name__c</columns>
        <columns>Program__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>External_ID__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>OrgGroup__c.Pioneer_Sales_Org</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>PHI-AFRICA</value>
        </filters>
        <label>Pioneer ZA Sales Org</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Portal_Access_Groupings</fullName>
        <columns>NAME</columns>
        <columns>Owning_Organization__c</columns>
        <columns>PortalAccessGrouping__c</columns>
        <columns>SiteObject__c</columns>
        <columns>Portal_Role__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Owning_Business__c</columns>
        <columns>Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>OrgGroup__c.Portal_Access_Grouping</value>
        </filters>
        <label>Portal Access Groupings</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>OG-{0000000000}</displayFormat>
        <label>Org Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Organizational Groups</pluralLabel>
    <recordTypes>
        <fullName>Business</fullName>
        <active>true</active>
        <description>The DuPont Business (Business Unit) or legal entity</description>
        <label>Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>ERP_Sales_Area</fullName>
        <active>true</active>
        <description>ERP Sales Area as per SAP (Sales Org, Distribution Channel, Division)</description>
        <label>ERP Sales Area</label>
    </recordTypes>
    <recordTypes>
        <fullName>N_H_Sales_Org</fullName>
        <active>true</active>
        <description>Nutriton and Health Sales Org layout</description>
        <label>N&amp;H Sales Org</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pioneer_Sales_Org</fullName>
        <active>true</active>
        <description>Pioneer Sales Organization Hierarchy</description>
        <label>Pioneer Sales Org</label>
    </recordTypes>
    <recordTypes>
        <fullName>Portal_Access_Grouping</fullName>
        <active>true</active>
        <description>Portal Access Grouping : name the business uses to describe a grouping of security metadata being requested which is required for Portal User Access (i.e. includes Profile, Permission Set, Group, etc.)</description>
        <label>Portal Access Grouping</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>